# mkdocs-rendering-obsidian-auto-card-link

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
src/mkdocs_rendering_obsidian_auto_card_link/: mkdocs.yml  plugin.py
src/mkdocs_rendering_obsidian_auto_card_link/assets/: card.html
src/mkdocs_rendering_obsidian_auto_card_link/docs/: styles.css  test.md
