[project]
name = "mkdocs-rendering-obsidian-auto-card-link"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ekishouTV", email = "45916397+ekishouTV@users.noreply.github.com" }
]
dependencies = [
    "mkdocs>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."mkdocs.plugins"]
rendering_obsidian_auto_card_link = 'mkdocs_rendering_obsidian_auto_card_link.plugin:RenderingObsidianAutoCardLink'

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_rendering_obsidian_auto_card_link"]
